driver/tests/snap/type_error/const_type_mismatch/0_input.splic
def answer: u32 = { let x: u64 = 1337; x };
